--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Set a Goal For Your Photography Journal.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <p>Think of what represents you as a photographer and a journalist and set goals of what you want to achieve with your travel photography journal.</p> 
             </div>
           </li>
 
