--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Pick a Set of photos That Represent You.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!.</p>
 
               <!--
 This block contains a photo and has a caption.
