--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Tips on how to curate and properly execute a travel photography site!</p>
+            <p>Tips on how to curate and properly execute a travel photography site that is personalized to you and the things that you love!</p>
 
           </div>
 
