--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Add your Things You'll Need.
               <li><h2>Things You'll Need</h2></li>
               <li>A camera</li>
               <li>Website</li>
-              <li>Photography passion</li>
+              <li>Photography and journalism passion</li>
             </ul>
           </aside>
         </div>
