--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Pick a Set of photos That Represent You.</h3>
+              <h3>Pick a Set of Photos That Represent You.</h3>
               <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!.</p>
 
               <!--
