--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>A camera</li>
+              <li>Camera</li>
               <li>Website</li>
               <li>Photography and journalism passion</li>
             </ul>
