--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Check Out Others Photography Vlogs to Get Ideas.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <p>This is a helpful thing to do in order to gain ideas and inspiration from others layout and content.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
