--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Pick a Set of Photos That Represent You.</h3>
-              <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!.</p>
+              <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!</p>
 
               <!--
 This block contains a photo and has a caption.
