--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Pick a Set of Photos That Represent You.</h3>
-              <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!</p>
+              <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!You will add these photos onto your website in order to showcase your work.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -149,8 +149,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Create a Website.</h3>
+              <p>You can pick from an array of website creators, once you chose one, pick a theme that goes with your photographs.Then pick a font and layout that looks the best to you!</p> 
             </div>
           </li>
 
