--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Add in Your Photographs to Your Website.</h3>
+              <p>Display your photos on your website in an aesthetic set-up. You can also add in thoughtul captions and blurbs in order to give your viewer more insight into your shots.</p> 
             </div>
           </li>
 
