--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Set a Goal For Your Photography Journal.</h3>
-              <p>Think of what represents you as a photographer and a journalist and set goals of what you want to achieve with your travel photography journal.</p> 
+              <h3>Set a Goal For Your Photography Journal and Pick Photos That Represent You.</h3>
+              <p>Think of what represents you as a photographer and a journalist and set goals of what you want to achieve with your travel photography journal. Then pick photos that represent you as a photographer.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Pick a Set of Photos That Represent You.</h3>
-              <p>Find photos that represent you as a photographer, or maybe some of your favorite shots!You will add these photos onto your website in order to showcase your work.</p>
+              <h3>Create a Website.</h3>
+              <p>You can pick from an array of website creators, once you chose one, pick a theme that goes with your photographs.Then pick a font and layout that looks the best to you.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -137,8 +137,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Check Out Others Photography Vlogs to Get Ideas.</h3>
-              <p>This is a helpful thing to do in order to gain ideas and inspiration from others layout and content.</p>
+              <h3>Add in Your Photographs to Your Website.</h3>
+              <p>Display your photos on your website in an aesthetic set-up.You can also add in thoughtul captions and blurbs in order to give your viewer more insight into your shots.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -149,8 +149,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Create a Website.</h3>
-              <p>You can pick from an array of website creators, once you chose one, pick a theme that goes with your photographs.Then pick a font and layout that looks the best to you!</p> 
+              <h3>Make an About You Page.</h3>
+              <p>This helps viewers get to know you and give them more about you and what you love to do with photography!</p> 
             </div>
           </li>
 
