--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Make an About You Page.</h3>
-              <p>This helps viewers get to know you and give them more about you and what you love to do with photography!</p> 
+              <p>This helps viewers get to know you and give them more about you and what you love to do with photography!Also add in any contact photo, so others can get in touch with you.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Add in Your Photographs to Your Website.</h3>
-              <p>Display your photos on your website in an aesthetic set-up. You can also add in thoughtul captions and blurbs in order to give your viewer more insight into your shots.</p> 
+              <h3>Publish Your Website!</h3>
+              <p>You are inally abel to publish your website and get your photographs out there!</p> 
             </div>
           </li>
 
