--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Publish Your Website!</h3>
-              <p>You are inally abel to publish your website and get your photographs out there!</p> 
+              <p>You are finally abel to publish your website and get your photographs out there!</p> 
             </div>
           </li>
 
