--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="https://www.wikihow.com/Create-a-Photography-Portfolio" title="How to Create a Photography Vlog: 5 Steps - wikiHow">WikiHow</a>.</p>
+      <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-a-Travel-Blog" title="How to Create a Photography Vlog: 5 Steps - wikiHow">WikiHow</a>.</p>
       <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
     </footer>
 
