--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
+        color:#e2cdc5;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
@@ -255,7 +255,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Times New Roman, sans-serif;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
