--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#e2cdc5;         /* CHANGE THE LINK COLOR HERE */
+        color:#83c2b5;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
@@ -275,7 +275,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D3E3E8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #83c2b5;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
