--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Times New Roman, sans-serif;         /* CHANGE THE FONT HERE */
-        color:#f0e6e2;         /* CHANGE THE FONT COLOR HERE */
+        color:#e2cdc5;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
