--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-a-Travel-Blog" title="How to Create a Photography Vlog: 5 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="https://flic.kr/p/RKAz8g" title="Melbourne, Australia, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/RKAz8g" title="Melbourne, Australia, on Flickr"> from Flickr</a></p>
     </footer>
 
     <!--
