--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">Photos are very important aspects to add.</p>
             </div>
           </li>
 
@@ -138,7 +138,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Add in Your Photographs to Your Website.</h3>
-              <p>Display your photos on your website in an aesthetic set-up.You can also add in thoughtul captions and blurbs in order to give your viewer more insight into your shots.</p>
+              <p>Display your photos on your website in an aesthetic set-up.You can also add in thoughftul captions and blurbs in order to give your viewer more insight into your shots.</p>
 
 
               <iframe width="560" height="315" src=""https://www.youtube.com/embed/EmfnOt6464Q?si=W1qWVo64pKxsXbyX" frameborder="0" allowfullscreen></iframe>
