--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="https://flic.kr/p/RKAz8g/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Photos are very important aspects to add.</p>
+              <p class="caption">Creating a website gives you lots of creative freedom.</p>
             </div>
           </li>
 
