--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://flic.kr/p/RKAz8g/" title="Kayaking Image From Flickr"><img height="%" width="%" src="https://flic.kr/p/RKAz8g"></a>
+<a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
               <p class="caption">Creating a website gives you lots of creative freedom.</p>
             </div>
           </li>
@@ -178,7 +178,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-a-Travel-Blog" title="How to Create a Photography Vlog: 5 Steps - wikiHow">WikiHow</a>.</p>
+      <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-a-Travel-Blog" title="How to Create a Photography Vlog:5 Steps - wikiHow">WikiHow</a>.</p>
       <p>Images are by <a href="https://flic.kr/p/RKAz8g" title="Melbourne, Australia, on Flickr"> from Flickr</a></p>
     </footer>
 
