--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-<a href="https://flic.kr/p/RKAz8g" title="Image of canoeing in Australia"><img alt="Image of canoeing in Australia" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+<a href="https://flic.kr/p/RKAz8g" title="Image of canoeing in Australia"><img alt="Image of canoeing in Australia" height="%" width="%" src="https://live.staticflickr.com/295/32654836201_9efdf82900_c.jpg" ></a>
               <p class="caption">Creating a website gives you lots of creative freedom.</p>
             </div>
           </li>
